# cuda-image-processing-capstone

./: CMakeLists.txt  Makefile  PRESENTATION_OUTLINE.md  PROJECT_DESCRIPTION.md  PROJECT_STATUS.md  README.md  SUBMISSION_GUIDE.md  demo.sh  demo_simple.sh  execution_log.txt  run.sh
data/kernels/: blur_kernel.txt  edge_kernel.txt  sharpen_kernel.txt
data/sample_images/: checkerboard.ppm  test.ppm  test_pattern.ppm
include/: cpu_reference.h  image_loader.h  image_processor.h  utils.h
output/: 4.1.01_brightness.tiff  4.1.01_gaussian.tiff  4.1.01_sobel.tiff
results/: execution_log.md  performance_analysis.md  sample_outputs.md
sample_images/: README.md  download.php?vol=misc
scripts/: build.sh  create_simple_images.sh  create_test_images.py  download_data.sh  run_tests.sh
src/: cpu_reference.cpp  image_loader.cpp  image_processor.cu  main.cpp  utils.cpp
